Update and rename biblio.lib to biblio.bib

--- a/biblio.bib
+++ b/biblio.bib
@@ -30,7 +30,7 @@ annote = {дата обращения: 30.07.2021}
 }
 
 @Book{FLAC,
-author = {Турчин, В. Ф.},
+author = {Немытых, А. П.},
 title = {Cборник трудов по функциональному языку программирования},
 publisher =  {СБОРНИК},
 address = {Переславль-Залесский},
