--- a/report.tex
+++ b/report.tex
@@ -666,7 +666,7 @@
 \subsection{Поставленные задачи}
 \begin{enumerate}
 \item oзнакомление с необходимой теорией для реализации заданных алгоритмов;
-\item реализация алгоритма перевода числа из 10-тичной системы счисления в систему счисления $2^{64}$
+\item реализация алгоритма перевода числа из 10-тичной системы счисления в систему счисления $2^{64}$;
 \item реализация стандартного алгоритма умножения на языке C;
 \item реализация алгоритма умножения, основанного на Китайской теореме об остатках, на языке C;
 \item генерирование различных тестовых данных;
@@ -680,23 +680,23 @@
 
 Исходя из условия поставленной задачи, ниже представлены алгоритмы, которые нужно было реализовать.
 
-Алгоритм перевода из десятичной системы счисления в систему счисления по основанию $2^{64}$:
+\noindent
+\textbf{Алгоритм перевода из десятичной системы счисления в систему счисления по основанию $2^{64}$:}
 \begin{enumerate}
-    \item число переводится в двоичную систему счисления алгоритмом стандартного деления в столбик;
+    \item число переводится в двоичную систему счисления алгоритмом стандартного алгоритма «столбиком»;
     \item из двоичной системы счисления переводится в систему счисления по основанию $2^{64}$;
 \end{enumerate}
-
-Алгоритм стандартного умножения:
-Пусть заданы два целых числа по основанию b - первое число $u_{1}u_{2}...u_{n}$, второе число $v_{1}v_{2}...v_{m}$. Алгоритм находит их произведение $w_{1}w_{2}...w_{m+n}$.
+\noindent
+\textbf{Алгоритм стандартного умножения:} Пусть заданы два целых числа по основанию b - первое число $u_{1}u_{2}...u_{n}$, второе число $v_{1}v_{2}...v_{m}$. Алгоритм находит их произведение $w_{1}w_{2}...w_{m+n}$.
 \begin{enumerate}
     \item устанавливаем все значения $w_{m+1}w_{m+2}...w_{m+n}$ равными нулю;
-    \item устанавливаем j=m (индекс цифры второго сомножителя);
+    \item устанавливаем j $=$ m (индекс цифры второго сомножителя);
     \item если $v_{j}=0$, устанавливаем $w_{j}=0$ и передаем управление на шаг 8;
-    \item устанавливаем i=n (индекс цифры первого сомножителя), k=0 (цифра переноса);
-    \item устанавливаем t=$u_{i}*v_{j}+w_{i+j}+k$
+    \item устанавливаем i $=$ n (индекс цифры первого сомножителя), k=0 (цифра переноса);
+    \item устанавливаем $t=u_{i}*v_{j}+w_{i+j}+k$;
     \item устанавливаем $w_{i+j}=t\mod{b}$, $k=[\frac{t}{b}]$;
-    \item цикл по индексу i. Уменьшаем i на единицу, если i>0, то возвращаемся в шаг 5, иначе устанавливаем $w_{j}=k$;
-    \item цикл по индексу j. Уменьшаем j на единицу, если j>0, то возвращаемся в шаг 3, иначе заканчиваем алгоритм.
+    \item цикл по индексу $i$. Уменьшаем $i$ на единицу, если $i>0$, то возвращаемся в шаг 5, иначе устанавливаем $w_{j}=k$;
+    \item цикл по индексу $j$. Уменьшаем $j$ на единицу, если $j>0$, то возвращаемся в шаг 3, иначе заканчиваем алгоритм.
 \end{enumerate}
 \begin{Example}\label{Example:MathFont5}
 Умножение 621 на 201 в десятичной системе счисления
@@ -721,12 +721,11 @@ $$
 \textbf{Ответ:} $621*201 = 124821$ 
 \end{Example}
 \Newline
-Алгоритм умножения, основанный на Китайской теореме об остатках ~\cite{Alghorythm_Chinese}:
+\textbf{Алгоритм умножения, основанный на Китайской теореме об остатках ~\cite{Alghorythm_Chinese}:}
 \begin{enumerate}
-    \item выполняем умножение двух чисел по стандартного алгоритму умножения в системе счисления $2_{64}$;
     \item задаем взаимно простые модули ($a_{1},a_{2}...a_{n}$);
-    \item находим все остатки от деления получившегося числа на модули ($r_{1}r_{2}...r_{n}$), которые должны являться взаимно простыми числами;
-    \item вычисляем M равный произведению всех модулей (M=$\displaystyle\ \Pi_{i=1}^{n}a_{i}$);
+    \item находим все остатки ($r_{1},r_{2}...r_{n}$) от деления входных чисел, умноженных друг на друга, на модули ($a_{1},a_{2}...a_{n}$);
+    \item вычисляем $M$ равный произведению всех модулей ($M=\displaystyle\ \Pi_{i=1}^{n}a_{i}$);
     \item для каждого модуля вычисляем  $\displaystyle\ M_{i}=\frac{M}{a_{i}}$;
     \item для каждого $M_{i}$ вычисляем его обратный элемент по модулю $a_{i}$  ($M{i}^{-1}\equiv\frac{1}{M_{i}}\mod a_{i}$);
     \item Вычисляем искомое значение по формуле $\displaystyle\ {x}\equiv \sum_{i=1}^{n} {r}_{i}{M}_{i}{M}_{i}^{-1} \mod {M}$
@@ -735,7 +734,7 @@ $$
 \begin{itemize}
     \item произведение входных чисел не должно превышать произведения всех модулей.
 \end{itemize}
-Для увеличения скорости работы алгоритма взаимно простые модули $a_{1}..a_{n}$ должны быть простыми числами Мерсенна. 
+Для увеличения скорости работы алгоритма взаимно простые модули $a_{1},a_{2}...a_{n}$ должны быть простыми числами Мерсенна. 
 \Newline
 
 \textbf{Число Мерсенна} - число вида $M_{n}=2^{n}-1$, где n - натуральное число; такие числа примечательны тем, что некоторые из них являются простыми при больших значениях n. Примеры простых чисел Мерсенна - 3, 7, 31, 127, 8191, 131 071, 524 287, 2 147 483 647 ~\cite{Mersen}.
@@ -760,7 +759,6 @@ $$
         a_{6}=131071
         \end{cases}
     \end{equation*}
-    \item находим результат умножения по стандартному алгоритму - 3675356*2912709=10705242499404;
     \item найдем все $r_{1}...r_{n}$
     \begin{equation*}
         \begin{cases}
@@ -842,11 +840,10 @@ typedef struct link {
 
 По условию задачи необходимо было работать с числами в системе счисления $2^{64}$, но одна цифра может превышать максимальное значение типа unsigned long в C, поэтому было принято решение хранить числа в системе счисления $2^{32}$ при этом число может быть легко представлено в нужной системе счисления. Для этого достаточно взять два разряда и домножить старший разряд на $2^{32}$, данное умножение можно произвести простым побитовым сдвигом на 32 бита влево.
 
-Следующая проблема, которая возникла передо мной, заключалась в реализации алгоритма, основанного на Китайской теореме об остатках. Для выполнения первого шага, то есть нахождения остатков от деления, необходимо было реализовать алгоритм деления в системе счисления $2^{64}$. Стандратный алгоритм деления столбиком не подходит для больших систем счисления, так как компьютер будет долго <<угадывать>> необходимую цифру. Решение данной проблемы - использование алгоритма деления, используемого при реализации языка FLAC, который является диалектом Рефала~\cite{FLAC}.
+Следующая проблема, которая возникла передо мной, заключалась в реализации алгоритма, основанного на Китайской теореме об остатках. Для выполнения первого шага, то есть нахождения остатков от деления, необходимо было реализовать алгоритм деления в системе счисления $2^{64}$. Стандратный алгоритм деления столбиком не подходит для больших систем счисления, так как компьютер будет долго <<угадывать>> необходимую цифру. Решение данной проблемы - реализация алгоритма деления, используемого при реализации языка FLAC, который является диалектом Рефала~\cite{FLAC}.
+\noindent
 
-Алгоритм:
-
-Пусть первое число $n_{1}=a_{n}a_{n-1}...a_{0}$, второе число $n_{2}=b_{m}b_{m-1}...b_{0}$
+\textbf{Алгоритм:} Пусть первое число $n_{1}=a_{n}a_{n-1}...a_{0}$, второе число $n_{2}=b_{m}b_{m-1}...b_{0}$
 \begin{itemize}
     \item необходимо найти $\delta=min([\frac{a_{n}*\beta+a_{n-1}}{b_{m}},\beta-1])$;
     \item домножаем делимое и делитель на $\delta$ - $a_{n}a_{n-1}...a_{0}*\beta=a_{l}a_{l-1}...a_{0}$, $b_{m}b_{m-1}...b_{0}*\beta=b_{k}b_{k-1}...b_{0}$;
@@ -859,14 +856,14 @@ typedef struct link {
 Последней проблемой стало нахождение обратного числа по определенному модулю.
 Алгоритм для его нахождения:
 \begin{itemize}
-    \item используем расширенный алгоритм Евклида для нахождения x и y, таких что ax+ny=d, где d - наибольший общий делитель a,n ~\cite{Euclid};
-    \item если d>1, то обратного элемента не существует, иначе возвращаем x.
+    \item используем расширенный алгоритм Евклида для нахождения $x$ и $y$, таких что $ax+ny=d$, где $d$ - наибольший общий делитель $a,n$~\cite{Euclid};
+    \item если $d>1$, то обратного элемента не существует, иначе возвращаем $x$.
 \end{itemize}
 
 \section{Тестирование}
-Целью тестирования - сравнение двух алгоритмов по времени их выполнения с целбю определения наиболее быстрого варианта. 
+Цель тестирования - сравнение двух алгоритмов по времени их выполнения с целью определения наиболее быстрого варианта. 
 
-Реализованная программа была протестирована на входных десятичных числах разной длины. Результаты были систематизированы в сравнительные таблицы ~\ref{table:table11}.
+Реализованная программа была протестирована на входных десятичных числах разной длины. Результаты были систематизированы в сравнительную таблицу ~\ref{table:table11}.
 
 \Newline
 \begin{table}[!htb]
